codex-rs/tui_app_server/src/bottom_pane/request_user_input/snapshots/codex_tui_app_server__bottom_pane__request_user_input__tests__request_user_input_hidden_options_footer.snap
---
source: tui_app_server/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                
  问 题  1/1（ 1 个 未 回 答 ）                                                         
  你 接 下 来 想 做 什 么 ？                                                             
                                                                                
    2. 运 行 测 试   选 择 一 个  crate 并 运 行 其 测 试 。                                   
    3. 审 查 差 异   总 结 或 审 查 当 前 改 动 。                                            
  › 4. 重 构       收 紧 结 构 并 移 除 死 代 码 。                                          
                                                                                
  选 项  4/5 | Tab 添 加 备 注  | Enter 提 交 当 前 回 答  | Esc 中 断
